<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


<!--    <ImageView-->
<!--        android:id="@+id/show_qr_code"-->
<!--        android:layout_width="50dp"-->
<!--        android:layout_height="50dp"-->
<!--        app:layout_constrai ntStart_toStartOf="parent"-->
<!--        app:layout_constraintBottom_toBottomOf="parent"-->
<!--        android:layout_margin="15dp"-->
<!--        android:src="@drawable/drongo_qr_code"-->
<!--        android:layout_marginEnd="5dp"-->
<!--        android:layout_marginBottom="5dp"-->
<!--        />-->


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_contacts_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/blue"
        android:clickable="true"
        android:contentDescription="@string/fab"
        android:focusable="true"
        android:src="@drawable/ic_person_add_white_24dp"
        android:visibility="invisible"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/show_qr_fab"
        app:layout_constraintEnd_toEndOf="@+id/show_qr_fab"
        app:tint="@android:color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/show_qr_fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/blue"
        android:clickable="true"
        android:contentDescription="@string/fab"
        android:focusable="true"
        android:visibility="invisible"
        android:src="@drawable/ic_qr_code"
        app:fabSize="normal"
        app:layout_constraintBottom_toTopOf="@+id/add_btn"
        app:layout_constraintEnd_toEndOf="@+id/add_btn"
        app:tint="@android:color/white" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/add_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:backgroundTint="@color/blue"
        android:clickable="true"
        android:focusable="true"
        app:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="@+id/contactList"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/add_icon" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/contactList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/noContactsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:textColor="@color/blue"
        android:textSize="22sp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/no_contacts_message"/>

</androidx.constraintlayout.widget.ConstraintLayout>