...
        app:layout_constraintHeight_percent="0.32"
        app:layout_constraintStart_toStartOf="@+id/scan_qr_container"
        app:layout_constraintTop_toBottomOf="@id/move_camera_text"
        app:layout_constraintWidth_percent="0.8" />

    <Button
        android:id="@+id/show_qr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_border_button"
        android:clickable="true"
        android:focusable="true"
        android:paddingLeft="10dp"
...
